alphaindexes/4.1.x/micommands.md
# Modules MI Commands

([A](#A)) ([B](#B)) ([C](#C)) ([D](#D)) ([E](#E)) ([F](#F)) ([G](#g))
([H](#H)) ([I](#I)) ([J](#J)) ([K](#K)) ([L](#L)) ([M](#M)) ([N](#n))
([O](#O)) ([P](#P)) ([Q](#Q)) ([R](#R)) ([S](#S)) ([T](#T)) ([U](#u))
([V](#V)) ([W](#W)) ([X](#X)) ([Y](#Y)) ([Z](#z))

## \[A\]

| Name                     | Module Path | Module Name                                                                                                              |
|--------------------------|-------------|--------------------------------------------------------------------------------------------------------------------------|
| **address_dump**         | *modules*   | [permissions](http://www.kamailio.org/docs/modules/4.1.x/modules/permissions.html)                                       |
| **address_reload**       | *modules*   | [permissions](http://www.kamailio.org/docs/modules/4.1.x/modules/permissions.html)                                       |
| **allow_uri**            | *modules*   | [permissions](http://www.kamailio.org/docs/modules/4.1.x/modules/permissions.html)                                       |
| **arg**                  | *modules*   | [kex](http://www.kamailio.org/docs/modules/4.1.x/modules/kex.html#kex.m.arg)                                             |
| **autheph.add_secret**   | *modules*   | [auth_ephemeral](http://www.kamailio.org/docs/modules/4.1.x/modules/auth_ephemeral.html#auth_eph.m.autheph.add_secret)   |
| **autheph.dump_secrets** | *modules*   | [auth_ephemeral](http://www.kamailio.org/docs/modules/4.1.x/modules/auth_ephemeral.html#auth_eph.m.autheph.dump_secrets) |
| **autheph.rm_secret**    | *modules*   | [auth_ephemeral](http://www.kamailio.org/docs/modules/4.1.x/modules/auth_ephemeral.html#auth_eph.m.autheph.rm_secret)    |

## \[B\]

| Name                 | Module Path | Module Name                                                                        |
|----------------------|-------------|------------------------------------------------------------------------------------|
| **bdb_reload**       | *modules*   | [db_berkeley](http://www.kamailio.org/docs/modules/4.1.x/modules/db_berkeley.html) |
| **bm_enable_global** | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/4.1.x/modules/benchmark.html)     |
| **bm_enable_timer**  | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/4.1.x/modules/benchmark.html)     |
| **bm_granularity**   | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/4.1.x/modules/benchmark.html)     |
| **bm_loglevel**      | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/4.1.x/modules/benchmark.html)     |

## \[C\]

| Name                   | Module Path | Module Name                                                                                               |
|------------------------|-------------|-----------------------------------------------------------------------------------------------------------|
| **check_config_hash**  | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/4.1.x/modules/cfgutils.html#cfgutils.m.check_config_hash) |
| **cleanup**            | *modules*   | [presence](http://www.kamailio.org/docs/modules/4.1.x/modules/presence.html)                              |
| **clear_statistics**   | *modules*   | [kex](http://www.kamailio.org/docs/modules/4.1.x/modules/kex.html#kex.m.clear_statistics)                 |
| **conference_reset**   | *modules*   | [presence_conference](http://www.kamailio.org/docs/modules/4.1.x/modules/presence_conference.html)        |
| **cr_activate_host**   | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/4.1.x/modules/carrierroute.html)                      |
| **cr_add_host**        | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/4.1.x/modules/carrierroute.html)                      |
| **cr_deactivate_host** | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/4.1.x/modules/carrierroute.html)                      |
| **cr_delete_host**     | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/4.1.x/modules/carrierroute.html)                      |
| **cr_dump_routes**     | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/4.1.x/modules/carrierroute.html)                      |
| **cr_reload_routes**   | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/4.1.x/modules/carrierroute.html)                      |
| **cr_replace_host**    | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/4.1.x/modules/carrierroute.html)                      |

## \[D\]

| Name                  | Module Path | Module Name                                                                                                 |
|-----------------------|-------------|-------------------------------------------------------------------------------------------------------------|
| **dlg_bridge**        | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog.html)                                    |
| **dlg_bridge**        | *modules*   | [dialog_ng](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog_ng.html)                              |
| **dlg_end_dlg**       | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog.html)                                    |
| **dlg_end_dlg**       | *modules*   | [dialog_ng](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog_ng.html)                              |
| **dlg_list**          | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog.html)                                    |
| **dlg_list**          | *modules*   | [dialog_ng](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog_ng.html)                              |
| **dlg_list_ctx**      | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog.html)                                    |
| **dlg_list_ctx**      | *modules*   | [dialog_ng](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog_ng.html)                              |
| **dlg_terminate_dlg** | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog.html)                                    |
| **dlg_terminate_dlg** | *modules*   | [dialog_ng](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog_ng.html)                              |
| **domain_dump**       | *modules*   | [domain](http://www.kamailio.org/docs/modules/4.1.x/modules/domain.html)                                    |
| **domain_reload**     | *modules*   | [domain](http://www.kamailio.org/docs/modules/4.1.x/modules/domain.html)                                    |
| **dp_reload**         | *modules*   | [dialplan](http://www.kamailio.org/docs/modules/4.1.x/modules/dialplan.html)                                |
| **dp_translate**      | *modules*   | [dialplan](http://www.kamailio.org/docs/modules/4.1.x/modules/dialplan.html)                                |
| **ds_list**           | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/4.1.x/modules/dispatcher.html#dispatcher.mi.ds_list)      |
| **ds_reload**         | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/4.1.x/modules/dispatcher.html#dispatcher.mi.ds_reload)    |
| **ds_set_state**      | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/4.1.x/modules/dispatcher.html#dispatcher.mi.ds_set_state) |

## \[E\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[F\]

| Name               | Module Path | Module Name                                                                                   |
|--------------------|-------------|-----------------------------------------------------------------------------------------------|
| **forward_filter** | *modules*   | [utils](http://www.kamailio.org/docs/modules/4.1.x/modules/utils.html#utils.m.forward_filter) |
| **forward_list**   | *modules*   | [utils](http://www.kamailio.org/docs/modules/4.1.x/modules/utils.html#utils.m.forward_list)   |
| **forward_proxy**  | *modules*   | [utils](http://www.kamailio.org/docs/modules/4.1.x/modules/utils.html#utils.m.forward_proxy)  |
| **forward_switch** | *modules*   | [utils](http://www.kamailio.org/docs/modules/4.1.x/modules/utils.html#utils.m.forward_switch) |

## \[G\]

| Name                | Module Path | Module Name                                                                                             |
|---------------------|-------------|---------------------------------------------------------------------------------------------------------|
| **get_config_hash** | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/4.1.x/modules/cfgutils.html#cfgutils.m.get_config_hash) |
| **GET_CPL**         | *modules*   | [cpl-c](http://www.kamailio.org/docs/modules/4.1.x/modules/cpl-c.html)                                  |
| **get_gflags**      | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/4.1.x/modules/cfgutils.html#cfgutils.m.get_gflags)      |
| **get_statistics**  | *modules*   | [kex](http://www.kamailio.org/docs/modules/4.1.x/modules/kex.html#kex.m.get_statistics)                 |

## \[H\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[I\]

| Name                 | Module Path | Module Name                                                                                      |
|----------------------|-------------|--------------------------------------------------------------------------------------------------|
| **imc_list_members** | *modules*   | [imc](http://www.kamailio.org/docs/modules/4.1.x/modules/imc.html)                               |
| **imc_list_rooms**   | *modules*   | [imc](http://www.kamailio.org/docs/modules/4.1.x/modules/imc.html)                               |
| **is_gflag**         | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/4.1.x/modules/cfgutils.html#cfgutils.m.is_gflag) |

## \[J\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[K\]

| Name     | Module Path | Module Name                                                                   |
|----------|-------------|-------------------------------------------------------------------------------|
| **kill** | *modules*   | [kex](http://www.kamailio.org/docs/modules/4.1.x/modules/kex.html#kex.m.kill) |

## \[L\]

| Name         | Module Path | Module Name                                                            |
|--------------|-------------|------------------------------------------------------------------------|
| **LOAD_CPL** | *modules*   | [cpl-c](http://www.kamailio.org/docs/modules/4.1.x/modules/cpl-c.html) |

## \[M\]

| Name           | Module Path | Module Name                                                            |
|----------------|-------------|------------------------------------------------------------------------|
| **mt_list**    | *modules*   | [mtree](http://www.kamailio.org/docs/modules/4.1.x/modules/mtree.html) |
| **mt_reload**  | *modules*   | [mtree](http://www.kamailio.org/docs/modules/4.1.x/modules/mtree.html) |
| **mt_summary** | *modules*   | [mtree](http://www.kamailio.org/docs/modules/4.1.x/modules/mtree.html) |

## \[N\]

| Name               | Module Path | Module Name                                                                    |
|--------------------|-------------|--------------------------------------------------------------------------------|
| **nh_enable_ping** | *modules*   | [nathelper](http://www.kamailio.org/docs/modules/4.1.x/modules/nathelper.html) |
| **nh_enable_rtpp** | *modules*   | [rtpproxy](http://www.kamailio.org/docs/modules/4.1.x/modules/rtpproxy.html)   |
| **nh_show_rtpp**   | *modules*   | [rtpproxy](http://www.kamailio.org/docs/modules/4.1.x/modules/rtpproxy.html)   |

## \[O\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[P\]

| Name                  | Module Path | Module Name                                                                                             |
|-----------------------|-------------|---------------------------------------------------------------------------------------------------------|
| **pdb_activate**      | *modules*   | [pdb](http://www.kamailio.org/docs/modules/4.1.x/modules/pdb.html)                                      |
| **pdb_deactivate**    | *modules*   | [pdb](http://www.kamailio.org/docs/modules/4.1.x/modules/pdb.html)                                      |
| **pdb_status**        | *modules*   | [pdb](http://www.kamailio.org/docs/modules/4.1.x/modules/pdb.html)                                      |
| **pdt_list**          | *modules*   | [pdt](http://www.kamailio.org/docs/modules/4.1.x/modules/pdt.html)                                      |
| **pdt_reload**        | *modules*   | [pdt](http://www.kamailio.org/docs/modules/4.1.x/modules/pdt.html)                                      |
| **pike_list**         | *modules*   | [pike](http://www.kamailio.org/docs/modules/4.1.x/modules/pike.html#pike.m.pike_list)                   |
| **pl_get_pid**        | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/4.1.x/modules/pipelimit.html#pipelimit.m.pl_get_pid)   |
| **pl_get_pipes**      | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/4.1.x/modules/pipelimit.html#pipelimit.m.pl_get_pipes) |
| **pl_push_load**      | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/4.1.x/modules/pipelimit.html#pipelimit.m.pl_push_load) |
| **pl_set_pid**        | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/4.1.x/modules/pipelimit.html#pipelimit.m.pl_set_pid)   |
| **pl_set_pipe**       | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/4.1.x/modules/pipelimit.html#pipelimit.m.pl_set_pipe)  |
| **pl_stats**          | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/4.1.x/modules/pipelimit.html#pipelimit.m.pl_stats)     |
| **profile_get_size**  | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog.html)                                |
| **profile_get_size**  | *modules*   | [dialog_ng](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog_ng.html)                          |
| **profile_list_dlgs** | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog.html)                                |
| **profile_list_dlgs** | *modules*   | [dialog_ng](http://www.kamailio.org/docs/modules/4.1.x/modules/dialog_ng.html)                          |
| **pua_cleanup**       | *modules*   | [pua](http://www.kamailio.org/docs/modules/4.1.x/modules/pua.html)                                      |
| **pwd**               | *modules*   | [kex](http://www.kamailio.org/docs/modules/4.1.x/modules/kex.html#kex.m.pwd)                            |

## \[Q\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[R\]

| Name                 | Module Path | Module Name                                                                                             |
|----------------------|-------------|---------------------------------------------------------------------------------------------------------|
| **rand_get_prob**    | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/4.1.x/modules/cfgutils.html#cfgutils.m.rand_get_prob)   |
| **rand_reset_prob**  | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/4.1.x/modules/cfgutils.html#cfgutils.m.rand_reset_prob) |
| **rand_set_prop**    | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/4.1.x/modules/cfgutils.html#cfgutils.m.rand_set_prob)   |
| **refreshWatchers**  | *modules*   | [presence](http://www.kamailio.org/docs/modules/4.1.x/modules/presence.html)                            |
| **regex_reload**     | *modules*   | [regex](http://www.kamailio.org/docs/modules/4.1.x/modules/regex.html)                                  |
| **reload_blacklist** | *modules*   | [userblacklist](http://www.kamailio.org/docs/modules/4.1.x/modules/userblacklist.html)                  |
| **reload_matrix**    | *modules*   | [matrix](http://www.kamailio.org/docs/modules/4.1.x/modules/matrix.html)                                |
| **REMOVE_CPL**       | *modules*   | [cpl-c](http://www.kamailio.org/docs/modules/4.1.x/modules/cpl-c.html)                                  |
| **reset_gflag**      | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/4.1.x/modules/cfgutils.html#cfgutils.m.reset_gflag)     |
| **reset_statistics** | *modules*   | [kex](http://www.kamailio.org/docs/modules/4.1.x/modules/kex.html#kex.m.reset_statistics)               |
| **rls_cleanup**      | *modules*   | [rls](http://www.kamailio.org/docs/modules/4.1.x/modules/rls.html)                                      |
| **rpc**              | *modules*   | [mi_rpc](http://www.kamailio.org/docs/modules/4.1.x/modules/mi_rpc.html)                                |

## \[S\]

| Name            | Module Path | Module Name                                                                                               |
|-----------------|-------------|-----------------------------------------------------------------------------------------------------------|
| **set_gflag**   | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/4.1.x/modules/cfgutils.html#cfgutils.m.set_gflag)         |
| **sht_delete**  | *modules*   | [htable](http://www.kamailio.org/docs/modules/4.1.x/modules/htable.html)                                  |
| **sht_dump**    | *modules*   | [htable](http://www.kamailio.org/docs/modules/4.1.x/modules/htable.html)                                  |
| **sht_reload**  | *modules*   | [htable](http://www.kamailio.org/docs/modules/4.1.x/modules/htable.html)                                  |
| **shv_get**     | *modules*   | [pv](http://www.kamailio.org/docs/modules/4.1.x/modules/pv.html)                                          |
| **shv_set**     | *modules*   | [pv](http://www.kamailio.org/docs/modules/4.1.x/modules/pv.html)                                          |
| **sip_capture** | *modules*   | [sipcapture](http://www.kamailio.org/docs/modules/4.1.x/modules/sipcapture.html#sipcapture.m.sip_capture) |
| **sip_trace**   | *modules*   | [siptrace](http://www.kamailio.org/docs/modules/4.1.x/modules/siptrace.html)                              |
| **subnet_dump** | *modules*   | [permissions](http://www.kamailio.org/docs/modules/4.1.x/modules/permissions.html)                        |

## \[T\]

| Name               | Module Path | Module Name                                                                        |
|--------------------|-------------|------------------------------------------------------------------------------------|
| **trusted_dump**   | *modules*   | [permissions](http://www.kamailio.org/docs/modules/4.1.x/modules/permissions.html) |
| **trusted_reload** | *modules*   | [permissions](http://www.kamailio.org/docs/modules/4.1.x/modules/permissions.html) |
| **t_hash**         | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.1.x/modules/tmx.html)                 |
| **t_reply**        | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.1.x/modules/tmx.html)                 |
| **t_reply_callid** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.1.x/modules/tmx.html)                 |
| **t_uac_cancel**   | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.1.x/modules/tmx.html)                 |
| **t_uac_dlg**      | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.1.x/modules/tmx.html)                 |

## \[U\]

| Name                | Module Path | Module Name                                                                                       |
|---------------------|-------------|---------------------------------------------------------------------------------------------------|
| **ul_add**          | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.1.x/modules/usrloc.html#usrloc.m.ul_add)          |
| **ul_dump**         | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.1.x/modules/usrloc.html#usrloc.m.ul_dump)         |
| **ul_flush**        | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.1.x/modules/usrloc.html#usrloc.m.ul_flush)        |
| **ul_rm**           | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.1.x/modules/usrloc.html#usrloc.m.ul_rm)           |
| **ul_rm_contact**   | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.1.x/modules/usrloc.html#usrloc.m.ul_rm_contact)   |
| **ul_show_contact** | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.1.x/modules/usrloc.html#usrloc.m.ul_show_contact) |
| **uptime**          | *modules*   | [kex](http://www.kamailio.org/docs/modules/4.1.x/modules/kex.html#kex.m.uptime)                   |

## \[V\]

| Name        | Module Path | Module Name                                                                      |
|-------------|-------------|----------------------------------------------------------------------------------|
| **version** | *modules*   | [kex](http://www.kamailio.org/docs/modules/4.1.x/modules/kex.html#kex.m.version) |

## \[W\]

| Name           | Module Path | Module Name                                                                                           |
|----------------|-------------|-------------------------------------------------------------------------------------------------------|
| **which**      | *modules*   | [kex](http://www.kamailio.org/docs/modules/4.1.x/modules/kex.html#kex.m.which)                        |
| **ws.close**   | *modules*   | [websocket](http://www.kamailio.org/docs/modules/4.1.x/modules/websocket.html#websocket.m.ws.close)   |
| **ws.disable** | *modules*   | [websocket](http://www.kamailio.org/docs/modules/4.1.x/modules/websocket.html#websocket.m.ws.disable) |
| **ws.dump**    | *modules*   | [websocket](http://www.kamailio.org/docs/modules/4.1.x/modules/websocket.html#websocket.m.ws.dump)    |
| **ws.enable**  | *modules*   | [websocket](http://www.kamailio.org/docs/modules/4.1.x/modules/websocket.html#websocket.m.ws.enable)  |
| **ws.ping**    | *modules*   | [websocket](http://www.kamailio.org/docs/modules/4.1.x/modules/websocket.html#websocket.m.ping)       |
| **ws.pong**    | *modules*   | [websocket](http://www.kamailio.org/docs/modules/4.1.x/modules/websocket.html#websocket.m.ws.pong)    |

## \[X\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[Y\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[Z\]

| Name | Module Path | Module Name |
|------|-------------|-------------|
